# od-info

./: .gitignore  README.md  build.py  config.py  cron.py  dbupdate.py  flask_app.py  git-bump.sh  odinfo.sh  odinfo.spec  odscraper.py  ops-calc.py  pyproject.toml  rankingscraper.py  requirements.txt  rushpoints.py  start.bat  start_cron.sh  stop_cron.sh  threewordstory-R38.txt  title-holders.py  towncrier.py
app/: facade.py  towncrier.py
calcapp/: calcfacade.py  discord.py
calculator/: dominion.py  networth.py  ops.py  scrapetools.py  towncrier.py
calculators/: economy.py  military.py  militarycalculator.py  networthcalculator.py
docs/: barracks-spy-refinement-spec.md
domain/: buildings.py  castle.py  dataaccesslayer.py  domainhelper.py  dominion.py  land.py  magic.py  military.py  models.py  networth.py  ops.py  refdata.py  reference.py  scrapetools.py  technology.py  timeutils.py  towncrier.py  unknown.py
facade/: awardstats.py  discord.py  graphs.py  odinfo.py  towncrier.py  user.py
odinfo/: config.py  exceptions.py  timeutils.py
odinfoweb/: flask_app.py  forms.py  user.py  users-example.json
opsdata/: db.py  ops.py  rd39-12081.txt  schema.py  schema.sql  scrapetools.py  updater.py
ref-data/: config.json  nox.yaml  spells.yml  techs.yaml  techs.yml  wonders.yaml
rush/: rankingscraper.py  rush_rankings_v1.json  rush_rankings_v2.json  rushpoints.py  title-holders.py
scripts/: clear_tables.sql  oddities.sql  opcenter.py  tcmovie.py  threewordstory.py  unitoverview.py  visualize.py
templates/: analytics-base.html  analytics.html  dominfo.html  (+12 more)
(+69 files in other folders)
